--- a/src/shared/header/Header.scss
+++ b/src/shared/header/Header.scss
@@ -24,6 +24,7 @@
         width: 54px;
         cursor: pointer;
         position: relative;
+        border-radius: 50%;
       }
       .log-button {
         position: absolute;
