--- a/src/shared/input/Input.scss
+++ b/src/shared/input/Input.scss
@@ -34,6 +34,7 @@
     left: 5px;
     top: 10px;
     transition: 300ms ease all;
+    animation: fade_in_show 0.5s;
     &.shrink {
       @include shrink();
     }
@@ -72,47 +73,13 @@
   }
 }
 
-// @mixin shrink {
-//   top: -14px;
-//   font-size: 14px;
-//   color: grey;
-// }
-
-// .input-group {
-//   position: relative;
-//   margin: 15px 0;
-
-//   .input {
-//     width: 100%;
-//     font-family: inherit;
-//     font-size: 20px;
-//     padding: 10px 10px 0px 5px;
-//     background: none;
-//     background-color: white;
-//     border: none;
-//     border-bottom: 1px solid grey;
-//     outline: none;
-//     letter-spacing: 1px;
-//     margin-bottom: 20px;
-//     &:focus ~ .label {
-//       @include shrink();
-//     }
-//   }
-
-//   .label {
-//     color: grey;
-//     font-size: 20px;
-//     font-weight: normal;
-//     position: absolute;
-//     pointer-events: none;
-//     left: 5px;
-//     top: 10px;
-//     transition: 300ms ease all;
-//     &.shrink {
-//       @include shrink();
-//     }
-//   }
-//   input[type="password"] {
-//     letter-spacing: 0.3em;
-//   }
-// }
+@keyframes fade_in_show {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
