--- a/src/components/shop/itemCollections/ItemCollections.scss
+++ b/src/components/shop/itemCollections/ItemCollections.scss
@@ -3,8 +3,26 @@
   display: flex;
   flex-direction: column;
   height: 350px;
-  // margin: 1%;
-  // justify-content: space-between;
+  position: relative;
+  align-items: center;
+
+  &:hover {
+    .image {
+      opacity: 0.8;
+    }
+    .custom-button {
+      opacity: 0.85;
+      display: flex;
+    }
+  }
+
+  .custom-button {
+    width: 80%;
+    opacity: 0.8;
+    position: absolute;
+    bottom: 40px;
+    display: none;
+  }
 }
 
 .image {
@@ -20,7 +38,4 @@
   display: flex;
   justify-content: space-between;
   font-size: 1.4em;
-}
-
-.price {
 }
