--- a/src/shared/button/Button.scss
+++ b/src/shared/button/Button.scss
@@ -2,7 +2,9 @@
   width: 165px;
   width: auto;
   height: 50px;
-  letter-spacing: 3px;
+  display: flex;
+  justify-content: center;
+  letter-spacing: 1px;
   line-height: 50px;
   padding: 0 35px 0 35px;
   font-size: 15px;
@@ -27,5 +29,15 @@
     color: #979797;
     border-color: #ccc;
     cursor: not-allowed;
+  }
+}
+.inverted {
+  background-color: white;
+  color: black;
+  border: 1px solid black;
+  &:hover {
+    background-color: black;
+    color: white;
+    border: 1px solid white;
   }
 }
