--- a/src/components/card-dropdown/CardDropdown.scss
+++ b/src/components/card-dropdown/CardDropdown.scss
@@ -21,6 +21,12 @@
     border: 1px solid black;
   }
 
+  .empty-message {
+    margin: 50px auto;
+    text-align: center;
+    font-size: 0.8em;
+  }
+
   button {
     margin-top: auto;
   }
