--- a/src/components/mesages/Mesages.scss
+++ b/src/components/mesages/Mesages.scss
@@ -23,11 +23,11 @@
 }
 
 @media (max-width: 768px) {
-  .error-message {
-    width: 80%;
+  .message {
+    width: 60%;
 
     .content {
-      font-size: 1.1em;
+      font-size: 1.3em;
     }
   }
 }
