--- a/src/components/homepage/category/Category.scss
+++ b/src/components/homepage/category/Category.scss
@@ -1,5 +1,5 @@
 .category {
-  min-width: 30%;
+  width: 30%;
   height: 240px;
   flex: 1 1 auto;
   display: flex;
@@ -74,4 +74,13 @@
 
 .large {
   height: 340px;
+}
+
+@media (max-width: 768px) {
+  .category {
+    width: 90%;
+  }
+  .large {
+    height: 240px;
+  }
 }
