--- a/src/pages/collection-page/CollectionPage.scss
+++ b/src/pages/collection-page/CollectionPage.scss
@@ -7,10 +7,26 @@
 
   .list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
     .item-collection {
-      width: 90%;
-      margin-bottom: 30px;
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .collection-page {
+    .list {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .collection-page {
+    .list {
+      grid-template-columns: 1fr;
     }
   }
 }
