--- a/src/pages/login/LogIn.scss
+++ b/src/pages/login/LogIn.scss
@@ -1,5 +1,5 @@
 .login {
-  width: 30%;
+  width: 300px;
   margin: 0 auto;
 
   .new-user {
@@ -7,6 +7,7 @@
     color: blue;
     cursor: pointer;
     font-size: 1.5em;
+    margin-top: 20px;
   }
 
   form {
@@ -17,6 +18,21 @@
   }
   .buttons {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    button {
+      margin: 10px 30px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .login {
+    width: 90%;
+    .buttons {
+      button {
+        margin: 10px 0px;
+      }
+    }
   }
 }
